--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -97,10 +96,10 @@
   <div id="selectScreen">
     <div id="characterSelectText"></div>
     <div id="characterSelect1">
-      <div class="characterBox" onclick="player1.dragonType = 0" onmouseover="updateStats(1,0)" onmouseout="updateStats(1,player1.dragonType)"></div>
-      <div class="characterBox" onclick="player1.dragonType = 1" onmouseover="updateStats(1,1)" onmouseout="updateStats(1,player1.dragonType)"></div>
-      <div class="characterBox" onclick="player1.dragonType = 2" onmouseover="updateStats(1,2)" onmouseout="updateStats(1,player1.dragonType)"></div>
-      <div class="characterBox" onclick="player1.dragonType = 3" onmouseover="updateStats(1,3)" onmouseout="updateStats(1,player1.dragonType)"></div>
+      <div class="characterBox" onclick="updateSelectedCharacter(1, 0)" onmouseover="updateStats(1,0)" onmouseout="updateStats(1,player1.dragonType)"></div>
+      <div class="characterBox" onclick="updateSelectedCharacter(1, 1)" onmouseover="updateStats(1,1)" onmouseout="updateStats(1,player1.dragonType)"></div>
+      <div class="characterBox" onclick="updateSelectedCharacter(1, 2)" onmouseover="updateStats(1,2)" onmouseout="updateStats(1,player1.dragonType)"></div>
+      <div class="characterBox" onclick="updateSelectedCharacter(1, 3)" onmouseover="updateStats(1,3)" onmouseout="updateStats(1,player1.dragonType)"></div>
     </div>
     <div class="character1StatBox" style="top: 33vw"><div class="character1StatBar" style="background-image: url('img/StatBarPiece1.png')"></div></div>
     <div class="character1StatBox" style="top: 37vw"><div class="character1StatBar" style="background-image: url('img/StatBarPiece2.png')"></div></div>
@@ -110,10 +109,10 @@
     <p class="character1StatText" style="top: 41vw">Damage</p>
     <img id="selectedCharacter1" src="img/0OrangeStand.gif">
     <div id="characterSelect2">
-      <div class="characterBox" onclick="player2.dragonType = 0" onmouseover="updateStats(2,0)" onmouseout="updateStats(2,player2.dragonType)"></div>
-      <div class="characterBox" onclick="player2.dragonType = 1" onmouseover="updateStats(2,1)" onmouseout="updateStats(2,player2.dragonType)"></div>
-      <div class="characterBox" onclick="player2.dragonType = 2" onmouseover="updateStats(2,2)" onmouseout="updateStats(2,player2.dragonType)"></div>
-      <div class="characterBox" onclick="player2.dragonType = 3" onmouseover="updateStats(2,3)" onmouseout="updateStats(2,player2.dragonType)"></div>
+      <div class="characterBox" onclick="updateSelectedCharacter(2, 0)" onmouseover="updateStats(2,0)" onmouseout="updateStats(2,player2.dragonType)"></div>
+      <div class="characterBox" onclick="updateSelectedCharacter(2, 1)" onmouseover="updateStats(2,1)" onmouseout="updateStats(2,player2.dragonType)"></div>
+      <div class="characterBox" onclick="updateSelectedCharacter(2, 2)" onmouseover="updateStats(2,2)" onmouseout="updateStats(2,player2.dragonType)"></div>
+      <div class="characterBox" onclick="updateSelectedCharacter(2, 3)" onmouseover="updateStats(2,3)" onmouseout="updateStats(2,player2.dragonType)"></div>
     </div>
     <div class="character2StatBox" style="top: 33vw"><div class="character2StatBar" style="background-image: url('img/StatBarPiece1.png')"></div></div>
     <div class="character2StatBox" style="top: 37vw"><div class="character2StatBar" style="background-image: url('img/StatBarPiece2.png')"></div></div>
@@ -134,6 +133,17 @@
   <script src="Mousetrap.js"></script>
   <script src="script.js"></script>
   <script src="render.js"></script>
+  <script>
+    function updateSelectedCharacter(player, dragonType) {
+      if (player === 1) {
+        player1.dragonType = dragonType;
+        document.getElementById('selectedCharacter1').src = `img/${dragonType}OrangeStand.gif`;
+      } else if (player === 2) {
+        player2.dragonType = dragonType;
+        document.getElementById('selectedCharacter2').src = `img/${dragonType}OrangeStand.gif`;
+      }
+    }
+  </script>
 </body>
 
 </html>
